overflow fixed

--- a/src/components/idea/Idea.scss
+++ b/src/components/idea/Idea.scss
@@ -35,13 +35,13 @@
 			overflow-y: hidden;
 			.image-idea{
 				width: 100%;
-				height: 60%;
+				height: 55%;
 				object-fit: cover;
 				display: block;
 			}
 			.box-img__box{
 				padding: 40px 25px;
-				height: 40%;
+				height: 45%;
 				display: flex;
 				flex-direction: column;
 				h3{
@@ -64,7 +64,7 @@
 			// background-color: orange;
 			background-color: rgb(248, 194, 93);
 			.text__box--h1{
-				height: 60%;
+				height: 55%;
 				font-size: 1.5rem;
 				padding: 40px;
 				color: rgb(5,87,165);
@@ -74,7 +74,7 @@
 			}
 			.text__box--p{
 			background-color: rgb(239, 186, 86);
-				height: 40%;
+				height: 45%;
 				padding: 40px 25px;
 				h3{
 					margin-bottom: 5px;
@@ -102,6 +102,12 @@
 				flex: 1 1 48%;
 				width: 48%;
 				height: 700px;
+				.image-idea{
+					height: 60%;
+				}
+				.box-img__box{
+					height: 40%;
+				}
 			}
 		}
 	}
